WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315342
NetworkSocketChannel leaks when peer-initiated WebSocket close is not reciprocated by the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=315342
Summary
NetworkSocketChannel leaks when peer-initiated WebSocket close is not recipro...
Chris Dumez
Reported
2026-05-21 22:17:05 PDT
NetworkSocketChannel leaks when peer-initiated WebSocket close is not reciprocated by the WebProcess.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-05-21 22:17:13 PDT
rdar://130167032
Chris Dumez
Comment 2
2026-05-21 22:21:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65460
EWS
Comment 3
2026-05-22 17:56:00 PDT
Committed
313770@main
(f391b9f442fc): <
https://commits.webkit.org/313770@main
> Reviewed commits have been landed. Closing PR #65460 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug